[gd_scene load_steps=3 format=3 uid="uid://cnobup8di7l1g"]

[ext_resource type="AudioStream" uid="uid://cbr81ietg8mr3" path="res://Scene/Muse_Algorithm_Alternate_Reality_Version_Ringtone_(by Fringster.com).mp3" id="1_hctcc"]
[ext_resource type="Script" uid="uid://nsn0tu8derv4" path="res://Scene/option_menu.gd" id="1_t6fkd"]

[node name="option_menu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_t6fkd")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
offset_right = 124.0
offset_bottom = 101.0

[node name="main_menu_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="skill_Ladder_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "skill ladder"

[node name="AdaptiveModeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "adaptive mode"

[node name="exit_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "exit"

[node name="HBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 5.847
anchor_top = 0.26
anchor_right = 5.907
anchor_bottom = 0.625
offset_left = -62.5
offset_top = -11.5
offset_right = 113.1
offset_bottom = 51.9
grow_horizontal = 2
grow_vertical = 2

[node name="VolumeLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Music Volume:"

[node name="MusicVolumeSlider" type="HSlider" parent="HBoxContainer"]
layout_mode = 2

[node name="MuteButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "mute"

[node name="BGMPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_hctcc")
